# Weaver

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  support_agent.py
.beads/: issues.jsonl
.trellis/: .template-hashes.json
agent/: __init__.py  api.py
common/: __init__.py  agent_runs.py  agents_store.py  cancellation.py  chat_stream_translate.py  checkpoint_ops.py  checkpoint_runtime.py  collaboration.py  concurrency.py  config.py  e2b_env.py  knowledge_registry.py  langsmith.py  logger.py  memory_service.py  memory_store.py  metrics.py  persistence_schema.py  proxy_env.py  session_manager.py  session_service.py  session_store.py  sse.py  thread_ownership.py  tracing.py  uvicorn_reload.py  weaver_checkpointer.py
data/: agents.json
docs/: IMPROVEMENT_PLAN_V2.md  README.en.md  README.md  agent-module-architecture.md  agent-runtime-modularization.md  api.md  architecture.md  chat-streaming.md  configuration.md  deep-research-agent-tools.md  deep-research-multi-agent-architecture.md  deep-research-rollout.md  deep-research-runtime-flow.md  deep-research-supervisor-rollout.md  deep-research-verification-revision-loop.md  direct-agent-deep-execution-chains.md  getting-started.md  mcp.md  openapi-contract.md  project-architecture-analysis.md  project-learning-guide.md  roadmap.md  tags.md  tool-runtime-architecture.md  usage.md
scripts/: backend_full_test.py  benchmark_deep_research.py  dev.sh  (+9 more)
sdk/python/: README.md  pyproject.toml
sdk/python/weaver_sdk/: __init__.py  client.py  sse.py  types.py
(+991 files in other folders)
